<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/settingbg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <!-- settings text -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:scaleType="fitStart"
            android:src="@drawable/overlay2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="45sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"/>
    </FrameLayout>

    <!-- info text-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <!-- lanuage -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="40sp"
                android:layout_marginEnd="40dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint=""
                app:boxBackgroundMode="outline"
                app:endIconTint="@color/darkblue"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxBackgroundColor="@color/lightblue"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:id="@+id/dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <!-- gps -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="25dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/location"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30sp"/>
        </LinearLayout>
        <!-- creadit -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="55dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creadit"
                android:textSize="40sp"
                android:layout_marginEnd="15dp"/>
            <ImageView
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:src="@drawable/fish"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myName"
                android:textSize="30sp"/>
       </LinearLayout>
    </LinearLayout>
    <!-- controll buttons -->
    <FrameLayout
        android:id="@+id/soundbutton"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="110dp"
        android:layout_marginStart="10dp"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/button2"
            android:scaleType="fitEnd"/>
        <ImageView
            android:id="@+id/soundpic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/sound"
            android:layout_gravity="center"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/backbutton"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/button2"
            android:scaleType="fitStart"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/arrow"
            android:layout_gravity="center"/>
    </FrameLayout>

    <!-- extra info -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:scaleType="fitEnd"
            android:src="@drawable/overlay3"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/version"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/github"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/github"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"/>
                <ImageView
                    android:id="@+id/youtube"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/youtube"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="35dp"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>